--- a/GPU/TK2_Sentiment_Analysis_BERT.ipynb
+++ b/GPU/TK2_Sentiment_Analysis_BERT.ipynb
@@ -765,10 +765,10 @@
     "    LSTM_neurons=hp.Int('LSTM_neurons',min_value=8,max_value=128,step=8)\n",
     "    LSTM_layer=keras.layers.LSTM(LSTM_neurons,activation=LSTM_act,return_sequences=True)(bert_embedding)\n",
     "    #Conv Layer\n",
-    "    Conv_act=hp.Choice('Conv_act',values=['sigmoid','relu','linear'])\n",
+    "    Conv_act=hp.Choice('Conv_act',values=['sigmoid','relu'])\n",
     "    Conv_kernel=hp.Int('Conv_kernel',min_value=3,max_value=5,step=1)\n",
     "    Conv_stride=hp.Int('Conv_stride',min_value=1,max_value=2,step=1)\n",
-    "    Conv_layer=keras.layers.Conv1D(filters=1,kernel_size=Conv_kernel,strides=Conv_stride)(LSTM_layer)\n",
+    "    Conv_layer=keras.layers.Conv1D(filters=1,kernel_size=Conv_kernel,strides=Conv_stride,activation=Conv_act)(LSTM_layer)\n",
     "    #Max Pooling Layer\n",
     "    Pool_layer=keras.layers.MaxPooling1D(pool_size=2,strides=1)(Conv_layer)\n",
     "    #Flatten Layer\n",
@@ -973,7 +973,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
